--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'echarts',
-      nameLink: 'https://echarts.apache.org/examples/zh/index.html',
+      name: 'CSV',
+      nameLink: 'https://docs.python.org/3/library/csv.html',
       themeColor: '#FF69B4',
       repo: '',
       maxLevel: 1,
